Finish write to file

--- a/MovieDatabase/MovieDatabase.vcxproj
+++ b/MovieDatabase/MovieDatabase.vcxproj
@@ -167,6 +167,9 @@
     <ClInclude Include="Movie.h" />
     <ClInclude Include="Node.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="output.csv" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
